--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
-    "@typescript-eslint/no-floating-promises": "off"
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/camelcase": "off",
+    "camelcase": "off"
   }
 }
