--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "engines": {
     "node": ">=10"
   },
+  "repository": "https://github.com/git-ced/gurant.git",
   "keywords": [
     "oauth",
     "oauth2",
